--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- public/index.html -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/slick.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/slick-theme.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/nouislider.min.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/PriceRangeSlider.css" />
+
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +31,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +47,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+<!-- public/index.html -->
+<script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+<script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+<script src="%PUBLIC_URL%/js/slick.min.js"></script>
+<script src="%PUBLIC_URL%/js/nouislider.min.js"></script>
+<script src="%PUBLIC_URL%/js/jquery.zoom.min.js"></script>
+<script src="%PUBLIC_URL%/js/main.js"></script>
+
 </html>
