--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/PriceRangeSlider.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/skeletonLoader.css" />
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
