--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/PriceRangeSlider.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/skeletonLoader.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/CategoryFilter.css" />
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
