--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/PriceRangeSlider.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/skeletonLoader.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/CategoryFilter.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/ProductOption.css" />
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
